config/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.bluemix.net/rewrite-path: "serviceName=app-service rewrite=/"
    kubernetes.io/ingress.class: nginx 
  name: todo-app-ingress
  namespace: default
spec:
  rules:
  - http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
      - path: "/api/"
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 8080
